[양현우] 차고지 관리 -  그리드 폼 형태로 변경, 팝업 없애고 지도 추가

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -470,7 +470,11 @@ height: 24px;
 
 .btn_gcm.oldNode {margin-left:3px;  }
 .btn_gcm.oldNode a{display:inline-block; width:100%;box-sizing:border-box;}
-.btn_gcm.oldNode a:before { content:"\f041";}
+.btn_gcm.oldNode a:before {content:"\f041";}
+
+.btn_gcm.addGrg {margin-left:3px;  }
+.btn_gcm.addGrg a{display:inline-block; width:100%;box-sizing:border-box;}
+.btn_gcm.addGrg a:before {content: "\f494"; margin-right: 0.5px;}
 
 .btn_gcm.addPath {margin-left:3px;  }
 .btn_gcm.addPath a{display:inline-block; width:100%;box-sizing:border-box;}
@@ -1362,7 +1366,7 @@ ul.question li a:hover {font-weight:bold;}
     position: relative;
     /* top: 10px; */
     /* left: 10px; */
-    width: 302px;
+    width: auto;
     border: 1px solid #d9d9d9;
     /* box-shadow: 0 1px 1px rgb(0 0 0 / 40%); */
     /* background: #eee; */
