[고병수] 이벤트 이력 조회 - 그리드 컬럼 배치 수정, 이벤트내용 컬럼 정류소 출/도착 NODE_ID가 아닌 EVT_DATA로 변경, 이벤트 유형 검색 조건 추가.

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -132,6 +132,7 @@
 .grdr_20_2_200_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_2_212_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 212px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_2_250_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 250px minmax(20px, max-content) auto;} 
+.grdr_20_2_250_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 250px auto;} 
 .grdr_20_2_290_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 288px minmax(20px, max-content) auto;} 
 .grdr_20_2_350_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px minmax(20px, max-content) auto;} 
 .grdr_20_2_400_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 400px minmax(20px, max-content) auto;} 
@@ -141,6 +142,7 @@
 .grdr_20_2_230_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(230px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_2_250_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_2_1f_20_20_1f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 1fr minmax(20px, max-content) minmax(20px, max-content) 1fr;} /* 왼쪽그리드 하단 */
+.grdr_20_2_1f_20_1f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 1fr minmax(20px, max-content) 1fr;} /* 왼쪽그리드 하단 */
 .grdr_20_2_280_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(280px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_2_170_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(170px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;}
 
