[고병수] css, layout 변경 및 추가

--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -660,10 +660,16 @@ body {
 
 
 .brt_bit{
+	
 	background-image: url('/cm/images/brt/BIT-RED.png');
 	background-repeat: no-repeat;
 	height: 600px;
 	background-position: top;
+	
+	/* width:100%;
+	height:100%;
+	background-size: 100% 100%; */
+
 }
 .map_brtMain { height:351px; }
 
