--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -46,6 +46,8 @@
 .grdc_bms_main_right_content {display:grid; grid-template-columns:1fr 25px 1fr}
 .grdc_brtMain {display:grid; justify-items: center; grid-template-columns:auto}
 .grdc_1f_25_1f {display:grid; grid-template-columns:1fr 25px 1fr;}
+.grdc_6f_25_4f {display:grid; grid-template-columns:6fr 25px 4fr;}
+.grdc_65f_25_35f {display:grid; grid-template-columns:65fr 25px 35fr;}
 .grdc_45f_25_55f {display:grid; grid-template-columns:45fr 25px 55fr;}
 .grdc_if_60_if {display:grid; grid-template-columns:1fr 60px 1fr;}
 
@@ -71,7 +73,7 @@
 .grdc_a_20_700 {display:grid; grid-template-columns:auto 20px 700px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_800 {display:grid; grid-template-columns:auto 20px 800px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_900 {display:grid; grid-template-columns:auto 20px 900px;} /* 왼쪽 오른쪽 구분선 추가 */
-.grdc_a_20_900_minmax {display:grid; grid-template-columns:minmax(380px, auto) 20px 900px;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_a_20_900_minmax {display:grid; grid-template-columns:minmax(340px, auto) 20px 900px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1000 {display:grid; grid-template-columns:auto 20px 1000px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1100_minmax {display:grid; grid-template-columns:minmax(380px, auto) 20px 1100px;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_a_20_1200 {display:grid; grid-template-columns:auto 20px 1200px;}
@@ -91,6 +93,7 @@
 .grdc_1000_20_a {display:grid; grid-template-columns:1000px 20px auto;}
 .grdc_870_20_a {display:grid; grid-template-columns:870px 20px auto;}
 .grdc_1200_20_a {display:grid; grid-template-columns:1200px 20px auto;}
+.grdc_1200_20_550_a {display:grid; grid-template-columns:1200px 20px 550px auto;}
 .grdc_400_20_900_20_a {display:grid; grid-template-columns:400px 20px 900px 20px auto;}
 .grdc_500_20_900_20_a {display:grid; grid-template-columns:500px 20px 900px 20px auto;}
 .grdc_500_20_600_20_a {display:grid; grid-template-columns:500px 20px 600px 20px auto;}
@@ -109,8 +112,11 @@
 .grdc_3f_20_7f {display:grid; grid-template-columns:3fr 20px 7fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_4f_20_6f {display:grid; grid-template-columns:4fr 20px 6fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_5f_20_5f {display:grid; grid-template-columns:5fr 20px 5fr;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_5f_70_5f {display:grid; grid-template-columns:5fr 70px 5fr;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_6f_20_4f {display:grid; grid-template-columns:6fr 20px 4fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_7f_20_3f {display:grid; grid-template-columns:7fr 20px 3fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_15f_20_5f {display:grid; grid-template-columns:15fr 20px 5fr;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_2f_20_5f_20_3f {display:grid; grid-template-columns:2fr 20px 5fr 20px 3fr;} /* 왼쪽 오른쪽 구분선 추가 */
 
 .grdc_400_20_a_20_400 {display:grid; grid-template-columns:400px 20px auto 20px 400px;}
 
@@ -126,25 +132,44 @@
 .grdr_20_40_a {display:grid; grid-template-rows: 20px 40px auto;}
 
 .grdr_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px auto;}
+.grdr_20_2_110_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 110px auto;}
+.grdr_20_2_140_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 140px auto;}
+.grdr_20_35_2_140_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(35px, max-content) 2px 140px auto;}
+.grdr_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) 2px auto;}
+.grdr_20_35_2_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(35px, max-content) 2px auto;}
 .grdr_25_2_a {display:grid; grid-template-rows: minmax(25px, max-content) 2px auto;}
 .grdr_20_2_187_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 187px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_2_187_2_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 187px 2px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_2_200_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_2_212_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 212px minmax(20px, max-content) auto;} /* 왼쪽그리드 2개 layout*/
 .grdr_20_2_250_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 250px minmax(20px, max-content) auto;} 
-.grdr_20_2_250_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 250px auto;} 
 .grdr_20_2_290_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 288px minmax(20px, max-content) auto;} 
+.grdr_20_2_320_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 320px minmax(20px, max-content) auto;} 
+.grdr_20_2_290 {display:grid; grid-template-rows: minmax(20px, max-content) 2px 288px;} 
 .grdr_20_2_350_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px minmax(20px, max-content) auto;} 
 .grdr_20_2_400_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 400px minmax(20px, max-content) auto;} 
+.grdr_20_2_450_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 450px minmax(20px, max-content) auto;} 
 .grdr_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_36_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_2_250_20_20_36_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_2_230_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(230px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_2_250_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(250px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;} /* 왼쪽그리드 하단 */
-.grdr_20_2_1f_20_20_1f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 1fr minmax(20px, max-content) minmax(20px, max-content) 1fr;} /* 왼쪽그리드 하단 */
-.grdr_20_2_1f_20_1f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 1fr minmax(20px, max-content) 1fr;} /* 왼쪽그리드 하단 */
 .grdr_20_2_280_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(280px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;} /* 왼쪽그리드 하단 */
 .grdr_20_2_170_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) minmax(170px, max-content) minmax(20px, max-content) minmax(20px, max-content) auto;}
+.grdr_20_2_1f_20_20_1f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 1fr minmax(20px, max-content) minmax(20px, max-content) 1fr;} /* 왼쪽그리드 하단 */
+.grdr_20_2_4f_20_20_6f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 4fr minmax(20px, max-content) minmax(20px, max-content) 6fr;} /* 왼쪽그리드 하단 */
+.grdr_20_2_6f_20_20_4f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 6fr minmax(20px, max-content) minmax(20px, max-content) 4fr;} /* 왼쪽그리드 하단 */
+.grdr_20_2_1f_20_20_1f_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 1fr minmax(20px, max-content) minmax(20px, max-content) 1fr auto;} /* 왼쪽그리드 하단 */
+.grdr_20_2_1f_20_20_36_1f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 1fr minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) 1fr;} /* 왼쪽그리드 하단 */
+.grdr_20_36_1f_20_20_36_1f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(36px, max-content) 1fr minmax(20px, max-content) minmax(20px, max-content) minmax(36px, max-content) 1fr;} /* 예약화면 */
+.grdr_20_2_1f_20_1f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 1fr minmax(20px, max-content) 1fr;} /* 왼쪽그리드 하단 */
+.grdr_20_2_3f_20_7f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 3fr minmax(20px, max-content) 7fr;} /* 왼쪽그리드 하단 */
+.grdr_20_2_6f_20_4f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 6fr minmax(20px, max-content) 4fr;} /* 왼쪽그리드 하단 */
+.grdr_20_2_7f_20_3f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 7fr minmax(20px, max-content) 3fr;} /* 왼쪽그리드 하단 */
+.grdr_20_20_2_1f_20_1f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) minmax(2px, max-content) 1fr minmax(20px, max-content) 1fr;} /* 왼쪽그리드 하단 */
+.grdr_20_1f_20_1f {display:grid; grid-template-rows: minmax(20px, max-content) 1fr minmax(20px, max-content) 1fr;} /* 왼쪽그리드 하단 */
+.grdr_1f_1f_1f {display:grid; grid-template-rows: repeat(3, 1fr)} /* 왼쪽그리드 하단 */
+.grdr_6f_20_4f {display:grid; grid-template-rows: 6fr minmax(20px, max-content) 4fr;}
 
 .grdr_30_40_a {display:grid; grid-template-rows: 30px 40px auto;}
 .grdr_40_40_a {display:grid; grid-template-rows: 40px 40px auto;}
@@ -181,6 +206,7 @@
 .grdr_20_2_300_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_300_40_25_20_150_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 300px minmax(40px, max-content) minmax(25px, max-content) 20px 150px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_350_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
+.grdr_20_2_370_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 370px 20px minmax(20px, max-content) 2px auto;} /* 오른쪽 상하 구분선 추가 */
 .grdr_20_2_450_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 350px 20px minmax(20px, max-content) 2px auto;}
 .grdr_20_200_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 200px 20px minmax(20px, max-content) auto;}
 .grdr_20_2_200_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 2px 200px 20px minmax(20px, max-content) 2px auto;}
@@ -199,6 +225,7 @@
 .grdr_20_100_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 100px minmax(20px, max-content) minmax(20px, max-content) 2px auto;}
 .grdr_20_150_20_20_2_a {display:grid; grid-template-rows: minmax(20px, max-content) 150px minmax(20px, max-content) minmax(20px, max-content) 2px auto;}
 .grdr_20_180_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 180px minmax(20px, max-content) minmax(20px, max-content) auto;}
+.grdr_20_220_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 220px minmax(20px, max-content) minmax(20px, max-content) auto;}
 .grdr_20_180_20_20_105_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) 180px minmax(20px, max-content) minmax(20px, max-content) 105px minmax(20px, max-content) minmax(20px, max-content) auto;}
 
 .grdr_20_a_20_20_a_20_a {display:grid; grid-template-rows: minmax(20px, max-content) auto 20px minmax(20px, max-content) auto 20px auto;}
