[양현우] 수정사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1431,6 +1431,7 @@ ul.question li a:hover {font-weight:bold;}
     top: 90px;
     right: 10px;
     position: absolute;    
+    width: 211px; 
 }
 
 .map_status th
