[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -116,6 +116,7 @@
 .grdc_6f_20_4f {display:grid; grid-template-columns:6fr 20px 4fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_7f_20_3f {display:grid; grid-template-columns:7fr 20px 3fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_15f_20_5f {display:grid; grid-template-columns:15fr 20px 5fr;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_1f_20_1f_60_1f {display:grid; grid-template-columns:1fr 20px 1fr 60px 1fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_2f_20_5f_20_3f {display:grid; grid-template-columns:2fr 20px 5fr 20px 3fr;} /* 왼쪽 오른쪽 구분선 추가 */
 
 .grdc_400_20_a_20_400 {display:grid; grid-template-columns:400px 20px auto 20px 400px;}
@@ -169,6 +170,7 @@
 .grdr_20_2_7f_20_3f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(2px, max-content) 7fr minmax(20px, max-content) 3fr;} /* 왼쪽그리드 하단 */
 .grdr_20_20_2_1f_20_1f {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) minmax(2px, max-content) 1fr minmax(20px, max-content) 1fr;} /* 왼쪽그리드 하단 */
 .grdr_20_1f_20_1f {display:grid; grid-template-rows: minmax(20px, max-content) 1fr minmax(20px, max-content) 1fr;} /* 왼쪽그리드 하단 */
+.grdr_20_1f_20_20_1f {display:grid; grid-template-rows: minmax(20px, max-content) 1fr minmax(20px, max-content) minmax(20px, max-content) 1fr;} /* 왼쪽그리드 하단 */
 .grdr_1f_1f_1f {display:grid; grid-template-rows: repeat(3, 1fr)} /* 왼쪽그리드 하단 */
 .grdr_6f_20_4f {display:grid; grid-template-rows: 6fr minmax(20px, max-content) 4fr;}
 
