[양현우] 수정사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1082,7 +1082,7 @@ ul.question li a:hover {font-weight:bold;}
 
 .sttnInfopopup {
     background: #fff;
-    position: relative;
+    position: absolute;
 /*     bottom: 57px;
     left:2px; */
     bottom: 35px;
@@ -1099,7 +1099,7 @@ ul.question li a:hover {font-weight:bold;}
 
 .busInfoPopup {
     background: #fff;
-    position: relative;
+    position: absolute;
 /*     bottom: 57px;
     left:2px; */
     bottom: 42px;
@@ -1114,9 +1114,35 @@ ul.question li a:hover {font-weight:bold;}
     /* width: 190px; */
 }
 
+.bustraffic {
+	left: 0px;
+    top: 10px;
+    z-index: 10000000;	
+}
+
+.event_type {
+    margin-right: 40px;
+    word-wrap: break-word;
+    white-space: normal;
+}
+
+#overlay_tbody th{
+	font-size: 10px;
+}
+
+#overlay_tbody td{
+    font-size: 10px;
+    padding: 5px;
+    white-space: break-spaces;
+}
+
+#overlay_tbody div{
+	width : 80px;
+}
+
 .dsptchMessagePopup {
     background: #fff;
-    position: relative;
+    position: absolute;
 /*     bottom: 57px;
     left:2px; */
     bottom: 42px;
