[양현우] focus 아니어도 이벤트로그 추가되게 수정, focus 아니어도 집중 모니터링 구간 아닌곳 마커 위치 변경되게 수정

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -136,6 +136,8 @@
 
 .grdr_20_40_a {display:grid; grid-template-rows: 20px 40px auto;}
 
+.grdr_3f_2f_2f {display:grid; grid-template-rows: 5fr 4fr 4fr;}
+
 .grdr_a {display:grid; grid-template-rows:auto;}
 .grdr_2_a {display:grid; grid-template-rows: 2px auto;}
 .grdr_20_20_a {display:grid; grid-template-rows: minmax(20px, max-content) minmax(20px, max-content) auto;}
