[백승종] 수정사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -32,12 +32,14 @@
 
 .grdc_main_container {display:grid; justify-items: center; grid-template-rows:minmax(30x, max-content)}
 .grdc_brt_main {display:grid; grid-template-columns:minmax(1280px,1830px)}
-.grdc_brt_main_content {display:grid; grid-template-columns:4.8fr 25px 5.2fr}
-.grdc_brt_main_left {display:grid; grid-template-rows:30px 4.8fr 25px 5.2fr}
-.grdc_brt_main_right {display:grid; grid-template-rows:340px 25px 380px}
-.grdc_brt_main_right_content {display:grid; grid-template-columns:1fr 25px 1fr}
+.grdc_brt_main_content {display:grid; grid-template-columns:1fr 20px 1fr}
+.grdc_brt_main_left {display:grid; grid-template-rows:20px 360px 20px auto;}
+.grdc_brt_main_right {display:grid; grid-template-rows:340px 58px 320px}
+.grdc_brt_main_right_content {display:grid; grid-template-columns:1fr 10px 1fr}
 .grdr_20_5_320 {display:grid; grid-template-rows: minmax(20px, max-content) 5px 320px;}
 .grdr_20_5_350 {display:grid; grid-template-rows: minmax(20px, max-content) 5px 350px;}
+.grdr_20_5_290 {display:grid; grid-template-rows: minmax(20px, max-content) 5px 290px;}
+.grdr_20_5_a {display:grid; grid-template-rows: minmax(20px, max-content) 5px auto;}
 
 .grdc_bms_main {display:grid; grid-template-columns:minmax(1280px,1830px)}
 .grdc_bms_main_content {display:grid; grid-template-columns:4.8fr 25px 5.2fr}
