--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -29,6 +29,7 @@ body {
 	font-family: Malgun Gothic, mgw, Verdana, dotum, Sans-serif;
 /*	 font-size: 14px; */
 /*	 font-weight: 400; */
+background-color: #EBEBEB;
 }
 .header {
 	position: relative;
@@ -47,7 +48,7 @@ body {
 } */
 
 /* Layout */
-.main_wrap{position:relative;height:100%;min-width:1280px;background:#f2f3f6;overflow:hidden;} /* min-width:1280px */
+.main_wrap{position:relative;height:100%;min-width:1280px;overflow:hidden;} /* min-width:1280px */
 .main_header{margin:0px;}
 .main_container{position:absolute; left:0; right:0;top:88px; bottom:0;}
 /* .btn_aside{position:absolute;left:10px;top:8px;width:26px;height:26px;padding:2px;margin:0;;font-size:0;line-height:0;text-indent:-9999px;overflow:hidden;background:url(/cm/images/inc/bg_btn_side_slide.png) 50% 50% no-repeat}
@@ -56,7 +57,7 @@ body {
 .main_side{position:absolute; left:0; top:0; bottom:0; width:212px; background:#eaebef;}
 .m_contents{position:absolute; left:0; right:0; top:0; bottom:0px; overflow: hidden;}
 .m_contents .mdi{position:absolute;left:0;top:0;right:0;bottom:0}
-.m_contents .bot_option{height:36px;position:absolute;bottom:0;left:0;right:0;background: #f3f3f3;border:1px solid #8e8e8e;z-index:1000;}
+.m_contents .bot_option{height:36px;position:absolute;bottom:0;left:0;right:0;background: #333333 url("/cm/images/add/bg_bottom.png") no-repeat;z-index:1000;}
 
 /* .main_container.sd_slide .sidebox{width:0;overflow:hidden}
 .main_container.sd_slide .btn_aside{left:0}
@@ -470,6 +471,7 @@ body {
 	border: 1px solid #ced4d9;
 	width: 100%;
 	background-repeat: no-repeat;
+	background-size: cover;
 	object-fit: cover;
 	/* width: 100%;
 	height: 100vh;
@@ -478,9 +480,10 @@ body {
 	background-size: cover;
 	background-position: center; */
 	min-width: 894px;
-	height: 323px;
+	height: 360px;
 	box-sizing: border-box;
 	position:relative;
+	border-radius: 5px;
 }
 
 .brt_visual:before {content:'';width: 87px;height: 150px;display:block;background: url(/cm/images/bms/car_man.png) 0 0 no-repeat;background-size:cover;position:absolute;bottom: 7px;right: 194px;}
@@ -521,13 +524,14 @@ body {
     top: 20px;
 }
 .bms_visual{
-	background: url('/cm/images/bms/bms_visual.png') left bottom no-repeat;
+	background: url('/cm/images/bms/bms_visual01.png') center bottom no-repeat;
 	border: 1px solid #ced4d9;
 	width: 100%;
 	object-fit: cover;
 	height: 720px;
-	width: 894px;
+	width: 600px;
 	box-sizing: border-box;
+	border-radius: 5px;
 	/* width: 100%;
 	height: 100vh;
 	background-image: url('/cm/images/inc/brt_visual.png');
@@ -540,7 +544,7 @@ body {
 
 
 
-.bms_visual:before {content:'';width: 107px;height: 200px;display:block;background: url(/cm/images/bms/car_man.png) 0 0 no-repeat;background-size:cover;position:absolute;bottom: 30px;right: 404px;}
+.bms_visual:before {content:'';width: 107px;height: 200px;display:block;background: url(/cm/images/bms/car_man.png) 0 0 no-repeat;background-size:cover;position:absolute;bottom: 30px;right: 235px;}
 .bms_visual:after  {
     content:'';
     width: 60px;
@@ -550,7 +554,7 @@ body {
     background-size:cover;
     position:absolute;
     bottom: 80px;
-    right: 380px;
+    right: 216px;
     animation: anim1 linear normal infinite 2s;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -558,6 +562,123 @@ body {
     -o-transform: rotate(0deg);
     }
 
+.bms_weather {
+	height: 720px;
+	min-width: 285px;
+	padding: 0px !important;
+	background-color: #EB4545 !important;
+	color: #ffffff;
+	overflow: hidden;
+}
+.bms_weather > div > div {
+	display: grid;
+	grid-template-rows: 360px 360px;
+}
+.bms_weather .bms_cont_up {
+	padding: 40px 30px;
+	position: relative;
+}
+.bms_weather .bms_cont_up > div {
+	position: absolute;
+	top: 40px;
+	left: 30px;
+}
+.bms_weather .bms_cont_up .weather_temp > ul > li:nth-child(1) {
+	position: absolute;
+	bottom:35px;
+	left: 50%;
+    transform: translateX(calc(-50% + -40px));
+	width: 150px;
+	height: 150px;
+	background-color: #ffffff;
+}
+.bms_weather .bms_cont_up .weather_temp > ul > li:nth-child(2) {
+	position: absolute;
+	bottom: 40px;
+	left: 50%;
+    transform: translateX(40px);
+    width: 100%;
+}
+.bms_weather .bms_cont_up .weather_temp > ul > li:nth-child(2) > strong {
+	text-align: right;
+	font-size: 16px;
+}
+
+.bms_weather .bms_cont_up .weather_temp > ul > li:nth-child(3) {
+	position: absolute;
+	top: 70px;
+	left: 30px;
+	color: #ffffff;
+}
+.bms_weather .bms_cont_up .weather_temp > ul > li:nth-child(3) > a {
+	font-size: 85px;
+	font-weight: 800;
+	color: #ffffff;
+}
+.bms_weather .bms_cont_up .weather_temp > ul > li:nth-child(3) > strong {
+	font-size: 44px;
+}
+
+.bms_weather .bms_cont_up .weather_humid > ul > li:nth-child(1) {
+	position: absolute;
+	top:40px;
+	right: 33px;
+	width: 15px;
+	height: 15px;
+	background:url(/cm/images/bms/humidity_icon.svg) no-repeat left top;
+}
+.bms_weather .bms_cont_up .weather_humid > ul > li:nth-child(3) {
+	position: absolute;
+	top:60px;
+	right: 30px;
+}
+.bms_weather .bms_cont_up .weather_humid > ul > li:nth-child(3) a {
+	color: #ffffff;
+}
+
+
+
+.bms_weather .bms_cont_up .df_tt.fl {
+	padding: 0;
+	color: #ffffff;
+}
+.bms_weather .bms_cont_down {
+	background-color: #A13E3E !important;
+	padding: 40px 30px;
+}
+.bms_weather .bms_cont_down > ul {
+	display: grid;
+	height: 100%;
+	align-content: space-between;
+}
+.bms_weather .bms_cont_down > ul > li > ul {
+	position: relative;
+}
+.bms_weather .bms_cont_down > ul > li > ul > li:nth-child(1) {
+	font-size: 10px;
+}
+.bms_weather .bms_cont_down > ul > li > ul > li:nth-child(2) > a {
+	color: #ffffff;
+	font-size: 20px;
+	font-weight: 800;
+}
+.bms_weather .bms_cont_down > ul > li > ul > li:nth-child(3) {
+	position: absolute;
+	right: 0px;
+	top: 50%;
+	transform: translateY(-50%);
+}
+.bms_weather .bms_cont_down > ul > li > ul > li:nth-child(4) {
+	position: absolute;
+	right: 30px;
+	top: 50%;
+	transform: translateY(-50%);
+	content: '';
+	display: block;
+	background-color: #ffffff;
+	width: 33px;
+	height: 33px;
+}
 
 
 @keyframes anim1{
@@ -609,7 +730,7 @@ body {
     box-sizing: border-box;
     padding: 97px 5px 5px 5px;
     display: block;
-    margin: 10px;
+    margin: 3px;
     text-align: center;
     border: 1px solid #ced4d9;
     border-radius: 10px;
@@ -631,7 +752,7 @@ body {
 	height:100%;
 	background-size: 100% 100%; */
 }
-.map_brtMain { height:351px; }
+.map_brtMain { height:calc(100% - 20px);border-radius: 5px; overflow: hidden; }
 
 .ST003_station{
 	background-image: url('/cm/images/bms/ST003_1.png');
@@ -709,7 +830,7 @@ body {
 	
 }
 
-
+.bms_box_wrap {background-color: #ffffff; border-radius: 5px; padding: 20px; border: 1px solid #CED4D9}
 .bms_cont_wrap {border:1px solid #ced4d9;border-top: 2px solid #333333;box-sizing: border-box;padding: 50px 0px 60px 0px;}
 .bms_cont_left {margin: 0 auto; width: 250px;}
 
@@ -717,7 +838,7 @@ body {
 .bms_cont_left li ul {position:relative;overflow:hidden;height:100px;/* border: 1px solid #ced4d9; */box-sizing: border-box;padding: 22px; margin: 5px 0px 5px 5px;}
 .bms_cont_left li ul li{position:absolute;left: 160px;top: 34px;font-size: 22px;}
 .bms_cont_left li.weather_temp ul li:first-child{left: 20px;width:60px;height: 60px;margin: 0;top: 20px;}
-.bms_cont_left li.weather_humid ul li:first-child{left: 33px;width:60px;height: 60px;background:url(/cm/images/bms/humidity_icon.PNG) no-repeat left top;margin: 0;top: 27px;}
+.bms_cont_left li.weather_humid ul li:first-child{left: 33px;width:60px;height: 60px;background:url(/cm/images/bms/humidity_icon.svg) no-repeat left top;margin: 0;top: 27px;}
 .bms_cont_left li ul li.repeat{left: 88px;font-size: 22px;margin: 0;top: 38px;}
 .bms_cont_left li ul li .count{margin-left:20px;font-size: 33px;font-weight: bold;}
 .bms_cont_left li ul li strong{font-size:15px;vertical-align: top;margin: 2px 0 0 0;display: inline-block;}
@@ -762,4 +883,3 @@ body {
    background-position: top;
    position: relative;	
 	}
-}
