[양현우] 출발이벤트, 속도20km 이상 오버레이지움, 포커스만 오버레이 및 이력, 차고지 출도착 오버레이 추가, 노선 색두께 편경, 노스 순번 GPS값 처리, getPointToLine 테스트 완료 등

--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -471,7 +471,6 @@ background-color: #EBEBEB;
 	border: 1px solid #ced4d9;
 	width: 100%;
 	background-repeat: no-repeat;
-	background-size: cover;
 	object-fit: cover;
 	/* width: 100%;
 	height: 100vh;
@@ -480,10 +479,9 @@ background-color: #EBEBEB;
 	background-size: cover;
 	background-position: center; */
 	min-width: 894px;
-	height: 360px;
+	height: 323px;
 	box-sizing: border-box;
 	position:relative;
-	border-radius: 5px;
 }
 
 .brt_visual:before {content:'';width: 87px;height: 150px;display:block;background: url(/cm/images/bms/car_man.png) 0 0 no-repeat;background-size:cover;position:absolute;bottom: 7px;right: 194px;}
@@ -752,7 +750,7 @@ background-color: #EBEBEB;
 	height:100%;
 	background-size: 100% 100%; */
 }
-.map_brtMain { height:calc(100% - 20px);border-radius: 5px; overflow: hidden; }
+.map_brtMain { height:351px; }
 
 .ST003_station{
 	background-image: url('/cm/images/bms/ST003_1.png');
@@ -883,3 +881,41 @@ background-color: #EBEBEB;
    background-position: top;
    position: relative;	
 	}
+
+/* 노선도 */
+.route-map-area {
+	position: relative;
+	width: 100%;
+	height: calc(100% - 20px);
+}
+.route-map {
+	position: absolute;
+	width: calc(100% - 300px);
+	height: calc(100% - 300px);
+	min-width: 1060px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+.route-map .route-line { position: absolute; z-index: 1; }
+.route-line.h-line {transform: translateY(-2px); height: 4px;}
+.route-line.v-line {transform: translateX(-2px); left:-2px; width: 4px;}
+.route-line.smooth { background-color: #00A521;}
+.route-line.slow { background-color: #ECAD00;}
+.route-line.block { background-color: #FF0000;}
+.station {position: absolute; transform: translate(-10px, -10px); border:1px solid #707070; border-radius: 100%; width: 20px; height: 20px; background-color: #ffffff; background-position: center center; background-repeat: no-repeat; z-index: 2;}
+.station.left { background-image: url('/cm/images/tmap/station-left.svg');}
+.station.right { background-image: url('/cm/images/tmap/station-right.svg');}
+.station.up { background-image: url('/cm/images/tmap/station-up.svg');}
+.station.down { background-image: url('/cm/images/tmap/station-down.svg');}
+.station span.name {display:inline-block; width: 120px; position: absolute; top: 55px; left: 5px; transform: rotate(45deg); white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+.bus {position: absolute; transform: translate(-13px, -18px); width: 27px; height: 33px; background-position: center center; background-repeat: no-repeat; z-index: 3;}
+.bus.red {background-image: url('/cm/images/tmap/bus-red.svg');}
+.bus.blue {background-image: url('/cm/images/tmap/bus-blue.svg');}
+.bus.black {background-image: url('/cm/images/tmap/bus-black.svg');}
+.bus span.number {position:absolute; top: -20px; left: 50%; transform: translateX(-50%); width: 100px; background-color: #ffffff; text-align: center;}
+.cross_route_map_area {position: absolute; transform: translate(-7px, -7px); width: 14px; height: 14px; background:url('/cm/images/tmap/cross.svg') no-repeat; z-index: 3;}
+.cross_route_map_area span.name {display:inline-block; width: 120px; position: absolute; top: 55px; left: 5px; transform: rotate(45deg); white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+.light {position: absolute; transform: translate(-13px, -18px); width: 27px; height: 33px; background-position: center center; background-repeat: no-repeat; z-index: 3;}
+.light.red {background-image: url('/cm/images/tmap/light-red.svg');}
+.light.green {background-image: url('/cm/images/tmap/light-green.svg');}
