--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -471,6 +471,7 @@ background-color: #EBEBEB;
 	border: 1px solid #ced4d9;
 	width: 100%;
 	background-repeat: no-repeat;
+	background-size: cover;
 	object-fit: cover;
 	/* width: 100%;
 	height: 100vh;
@@ -479,9 +480,10 @@ background-color: #EBEBEB;
 	background-size: cover;
 	background-position: center; */
 	min-width: 894px;
-	height: 323px;
+	height: 360px;
 	box-sizing: border-box;
 	position:relative;
+	border-radius: 5px;
 }
 
 .brt_visual:before {content:'';width: 87px;height: 150px;display:block;background: url(/cm/images/bms/car_man.png) 0 0 no-repeat;background-size:cover;position:absolute;bottom: 7px;right: 194px;}
@@ -750,7 +752,7 @@ background-color: #EBEBEB;
 	height:100%;
 	background-size: 100% 100%; */
 }
-.map_brtMain { height:351px; }
+.map_brtMain { height:calc(100% - 20px);border-radius: 5px; overflow: hidden; }
 
 .ST003_station{
 	background-image: url('/cm/images/bms/ST003_1.png');
