[양현우] 정류소 모니터링 작업중

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -96,6 +96,7 @@
 
 .grdc_500_20_a {display:grid; grid-template-columns:500px 20px auto;}
 .grdc_500_0_a {display:grid; grid-template-columns:500px 0px auto;}
+.grdc_375_0_a {display:grid; grid-template-columns:375px 0px auto;}
 .grdc_470_0_a {display:grid; grid-template-columns:470px 0px auto;}
 .grdc_500_0_a {display:grid; grid-template-columns:500px 0px auto;}
 .grdc_550_0_a {display:grid; grid-template-columns:550px 0px auto;}
