[고병수] 차내장치/시설물 모니터링 sbrt 복사

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -146,6 +146,7 @@
 .grdc_6f_0_4f {display:grid; grid-template-columns:6fr 0px 4fr;} 
 .grdc_7f_20_3f {display:grid; grid-template-columns:7fr 20px 3fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_15f_20_5f {display:grid; grid-template-columns:15fr 20px 5fr;} /* 왼쪽 오른쪽 구분선 추가 */
+.grdc_1f_20_1f_20_1f_20_1f {display:grid; grid-template-columns:1fr 20px 1fr 20px 1fr 20px 1fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_1f_20_1f_60_1f {display:grid; grid-template-columns:1fr 20px 1fr 60px 1fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_2f_20_4f_60_4f {display:grid; grid-template-columns:2fr 20px 4fr 60px 4fr;} /* 왼쪽 오른쪽 구분선 추가 */
 .grdc_2f_20_5f_20_3f {display:grid; grid-template-columns:2fr 20px 5fr 20px 3fr;} /* 왼쪽 오른쪽 구분선 추가 */
