[양현우] peoplecount 이미지, 디자인 css 추가

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1856,6 +1856,49 @@ ul.question li a:hover {font-weight:bold;}
 }
 
 
+.map_mesage, .map_info {box-sizing: border-box; position: relative;width: 360px; background-color: #ffffff; border: 1px solid #888888; box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.15);}
+.map_mesage::after, .map_info::after {content: ''; display: block; width: 22px; height: 12px; position: absolute; bottom: -12px; left: 50%; transform: translateX(-50%); background: url('/bims/cm/images/tmap/vertex_white.png') no-repeat;} 
+.dispatch, .mesage {height: 50px; padding:0 50px ; border-radius: 25px;}
+.map_mesage span {display: block; line-height: 46px; font-size: 14px !important; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
+.event {box-sizing: border-box;}
+.map_mesage::before {display: block; width: 30px; height: 30px; position: absolute; border-radius: 100%; top: 50%; left: 10px; transform: translateY(-50%); line-height: 30px; text-align: center; color: #ffffff; font-weight: 800; }
+.dispatch::before {content: 'D'; background-color: #333333; font-size: 16px; }
+.mesage::before {content: '!'; background-color: #EB4545; font-size: 22px; }
+.map_mesage .close_mesage, .map_info .close_mesage {position: absolute; background: url('/bims/cm/images/tmap/layer_close.svg') no-repeat center; width: 30px; height: 30px; border: none; cursor: pointer;}
+.map_mesage .close_mesage {top: 50%; right: 10px; transform: translateY(-50%); }
+.map_info {padding: 20px; border-radius: 5px;}
+.map_info .action {display: inline-block; font-size: 14px; font-weight: 800;}
+.map_info .stay_sec {display: inline-block; color: #888888; margin-left: 10px;}
+.map_info .station_info {position: relative; margin-top: 10px;}
+.map_info .station_info::before {content: ''; display: block; width:3px; height: 25px; position: absolute; left: 5px; top: 50%; transform: translateY(-50%); background-color: #9BDAEE;}
+.map_info .station_info th {position: relative; padding-left: 16px; font-weight: 200; color: #888888; text-align: left;}
+.map_info .station_info th::before {content: ''; display: block; width: 9px; height: 9px; position: absolute; left: 0; top: 50%; transform: translateY(-50%); border-radius: 100%; background-color: #9BDAEE;}
+.map_info .event_mesage {background-color: #E9E9E9; padding: 10px; margin-top: 10px;}
+.map_info .event_mesage dd {margin: 0; display: block; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
+.map_info .close_mesage {top: 10px; right: 10px;}
+.cross_info {width: 160px; padding: 5px; border: 1px solid #707070; background-color: #303030; border-radius: 5px;}
+.cross_info .info_wrap {background-color: #000000; border-radius: 2px;}
+.cross_info .info_wrap .cross_img {width: 100%; height: 80px; display: block;}
+.cross_info .info_wrap .cross_mesages {padding: 5px 0}
+.cross_info .info_wrap .cross_mesages span {font-size: 20px; font-weight: 800; text-align: center; width: 100%; display: block;}
+.cross_info .info_wrap .cross_mesages .tx_green {color:#11FF00}
+.cross_info .info_wrap .cross_mesages .tx_red {color:#FF5151}
+.cross_info .info_wrap .cross_mesages .tx_yellow {color:#F7FF00}
+.map_icon {width: 360px; background-color: #ffffff; border-radius: 5px; border: 1px solid #888888;}
+.map_icon ul {display: flex; justify-content: space-between; }
+.map_icon ul li {width: calc(100% / 4); padding: 20px 0; text-align: center; border-right: 1px solid #888888;}
+.map_icon ul li:last-child {border: none;}
+.map_icon ul li img {width: 20px; height: 20px;}
+.map_icon ul li .icon_name {margin-top: 10px;}
+.station_display {width: 160px; padding: 5px; border: 1px solid #707070; border-radius: 5px; background-color: #303030;}
+.station_display .mesage_wrap {background-color: #000000; border-radius: 2px;}
+.station_display .mesage_wrap .display_mesage {padding: 10px 0}
+.station_display .mesage_wrap .display_mesage span {font-size: 20px; font-weight: 800; text-align: center; width: 100%; display: block; color:white;}
+.station_display .mesage_wrap .display_mesage .tx_green {color:#11FF00}
+.station_display .mesage_wrap .display_mesage .tx_red {color:#FF5151}
+.station_display .mesage_wrap .display_mesage .tx_yellow {color:#F7FF00}
+
+
 
 /* 지현추가 : font-awesome.css */
 
