[양현우] 오버레이 디자인 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1894,6 +1894,7 @@ ul.question li a:hover {font-weight:bold;}
 .station_display .mesage_wrap {background-color: #000000; border-radius: 2px;}
 .station_display .mesage_wrap .display_mesage {padding: 10px 0}
 .station_display .mesage_wrap .display_mesage span {font-size: 20px; font-weight: 800; text-align: center; width: 100%; display: block; color:white;}
+.station_display .mesage_wrap .display_mesage .powerOnDiv span {font-size: 20px; font-weight: 800; text-align: center; width: 100%; display: block; color:white;}
 .station_display .mesage_wrap .display_mesage .tx_green {color:#11FF00}
 .station_display .mesage_wrap .display_mesage .tx_red {color:#FF5151}
 .station_display .mesage_wrap .display_mesage .tx_yellow {color:#F7FF00}
