--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1859,7 +1859,7 @@ ul.question li a:hover {font-weight:bold;}
 .map_mesage, .map_info {box-sizing: border-box; position: relative;width: 360px; background-color: #ffffff; border: 1px solid #888888; box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.15);}
 .map_mesage2, .map_info2 {box-sizing: border-box; position: relative;width: 180px; background-color: #ffffff; border: 1px solid #888888; box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.15); top: -66px; right: -91px;}
 .map_mesage::after, .map_info::after {content: ''; display: block; width: 22px; height: 12px; position: absolute; bottom: -12px; left: 50%; transform: translateX(-50%); background: url('/cm/images/tmap/vertex_white.png') no-repeat;} 
-.dispatch, .mesage {height: 50px; padding:0 50px ; border-radius: 25px;}
+.dispatch, .mesage {height: 50px; padding:0 50px ; border-radius: 25px;  bottom: 42px; left: -180px;}
 .map_mesage span {display: block; line-height: 46px; font-size: 14px !important; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
 .event {box-sizing: border-box;}
 .map_mesage::before {display: block; width: 30px; height: 30px; position: absolute; border-radius: 100%; top: 50%; left: 10px; transform: translateY(-50%); line-height: 30px; text-align: center; color: #ffffff; font-weight: 800; }
