[고병수] SBRT 수정사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1891,7 +1891,8 @@ ul.question li a:hover {font-weight:bold;}
 .map_icon ul li:last-child {border: none;}
 .map_icon ul li img {width: 20px; height: 20px;}
 .map_icon ul li .icon_name {margin-top: 10px;}
-.station_display {width: 160px; padding: 5px; border: 1px solid #707070; border-radius: 5px; background-color: #303030;}
+/* .station_display {width: 160px; padding: 5px; border: 1px solid #707070; border-radius: 5px; background-color: #303030;} */
+.station_display {width: 130px; padding: 5px; border: 1px solid #707070; border-radius: 5px; background-color: #303030;} /* width 130으로 수정 bs */
 .station_display .mesage_wrap {background-color: #000000; border-radius: 2px;}
 .station_display .mesage_wrap .display_mesage {padding: 10px 0}
 .station_display .mesage_wrap .display_mesage span {font-size: 20px; font-weight: 800; text-align: center; width: 100%; display: block; color:white;}
