[백승종] 수정사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/dashboard/design.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/dashboard/design.css
@@ -62,6 +62,11 @@
   border-color: #cc0f0f;
 }
 
+.display .situation.green {
+  background-color: #abc600;
+  border-color: #99ae00;
+}
+
 .display .t-light {
   -ms-grid-row: 2;
   -ms-grid-row-span: 2;
