--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -93,6 +93,7 @@
 .grdc_a_70_550_minmax {display:grid; grid-template-columns:minmax(370px, auto) 70px 550px;}
 
 .grdc_330_20_a {display:grid; grid-template-columns:330px 20px auto;}
+.grdc_310_20_a {display:grid; grid-template-columns:310px 20px auto;}
 
 .grdc_500_20_a {display:grid; grid-template-columns:500px 20px auto;}
 .grdc_500_0_a {display:grid; grid-template-columns:500px 0px auto;}
