[양현우] 모니터링 대시보드와 멘트 일치적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -1856,10 +1856,12 @@ ul.question li a:hover {font-weight:bold;}
 }
 
 .map_mesage, .map_info {box-sizing: border-box; position: relative;width: 360px; background-color: #ffffff; border: 1px solid #888888; box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.15);}
-.map_mesage2, .map_info2 {box-sizing: border-box; position: relative;width: 250px; background-color: #ffffff; border: 1px solid #888888; box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.15); left: -11px !important; bottom: 68px !important;}
+.map_mesage2, .map_info2 {box-sizing: border-box; position: relative;width: 297px; background-color: #ff7b00; border-color: #ce6c11; border: 1px solid #888888; box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.15); left: -11px !important; bottom: 68px !important;}
 .map_mesage::after, .map_info::after {content: ''; display: block; width: 22px; height: 12px; position: absolute; bottom: -12px; left: 50%; transform: translateX(-50%); background: url('/cm/images/tmap/vertex_white.png') no-repeat;}
-.dispatch, .mesage {height: 50px; padding:0 50px ; border-radius: 25px;  bottom: 42px; left: -180px;}
-.map_mesage span, .map_mesage2 span {display: block; line-height: 46px; font-size: 14px !important; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
+.map_mesage2::after, .map_info2::after {content: ''; display: block; width: 22px; height: 12px; position: absolute; bottom: -12px; left: 54%; transform: translateX(-50%); background: url('/cm/images/tmap/vertex_white.png') no-repeat;}
+.mesage {height: 50px; padding:0 50px ; border-radius: 25px; bottom: 42px; left: -180px;}
+.dispatch {height: 50px; padding:0 50px ; border-radius: 25px; background-color: #0059ff; border-color: #0b4ecc; bottom: 42px; left: -179px;}
+.map_mesage span, .map_mesage2 span {display: block; color:#ffffff; line-height: 46px; font-size: 14px !important; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
 .event {box-sizing: border-box;}
 .map_mesage::before, .map_mesage2::before {display: block; width: 30px; height: 30px; position: absolute; border-radius: 100%; top: 50%; left: 10px; transform: translateY(-50%); line-height: 30px; text-align: center; color: #ffffff; font-weight: 800; }
 .dispatch::before {content: 'D'; background-color: #333333; font-size: 16px; }
@@ -1873,7 +1875,7 @@ ul.question li a:hover {font-weight:bold;}
 .map_info .station_info::before {content: ''; display: block; width:3px; height: 25px; position: absolute; left: 5px; top: 50%; transform: translateY(-50%); background-color: #9BDAEE;}
 .map_info .station_info th {position: relative; padding-left: 16px; font-weight: 200; color: #888888; text-align: left;}
 .map_info .station_info th::before {content: ''; display: block; width: 9px; height: 9px; position: absolute; left: 0; top: 50%; transform: translateY(-50%); border-radius: 100%; background-color: #9BDAEE;}
-.map_info .event_mesage {background-color: #E9E9E9; padding: 10px; margin-top: 10px;}
+.map_info .event_mesage {background-color: #0059ff; border-color: #0b4ecc; color:#ffffff; padding: 10px; margin-top: 10px;}
 .map_info .event_mesage dd {margin: 0; display: block; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
 .map_info .close_mesage {top: 10px; right: 10px;}
 .cross_info {width: 160px; padding: 5px; border: 1px solid #707070; background-color: #303030; border-radius: 5px;}
