[양현우] dashboard2 작업, 웹소켓 테스트전

--- a/SBRT-Web/src/main/resources/static/cm/css/dashboard/design.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/dashboard/design.css
@@ -160,7 +160,7 @@
 .display .next-position {
   -ms-grid-row: 4;
   -ms-grid-row-span: 1;
-  grid-row: 4/5;
+  grid-row: 3/5;
   font-size: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -318,4 +318,40 @@
 .display .line-info .icon-wrap .cross.green {
   background-image: url("/cm/images/dashboard/cross-green.svg");
 }
+
+.display .sttnETA {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2/3;
+  font-size: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;          
+   padding: 50px;       
+}
+
+
+
+.display .sttnETA dl {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.display .sttnETA dl dt {
+  font-weight: 600;
+}
+
+.display .sttnETA dl dd {
+  margin-left: 20px;
+  font-weight: 600;
+}
+
 /*# sourceMappingURL=design.css.map */
